fix(spreadsheet): tabstrip in format dialog is not properly aligned

--- a/scss/spreadsheet/_layout.scss
+++ b/scss/spreadsheet/_layout.scss
@@ -613,15 +613,6 @@
             border-style: solid;
             border-color: inherit;
         }
-
-        .k-tabstrip-top  {
-            margin-left: ($spacer / -2);
-            margin-right: ($spacer / -2);
-
-            & > .k-tabstrip-items {
-                padding: 0 $padding-x;
-            }
-        }
     }
 
 }
